docs: create swagger for genre endpoint
