# routers/genre.go
@@ -7,10 +7,11 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func genreAdminRouter(r *gin.RouterGroup){
+func genreAdminRouter(r *gin.RouterGroup) {
 	r.Use(middlewares.VerifyToken())
 	r.POST("", controllers.CreateGenre)
+	r.DELETE("/:id", controllers.DeleteGenre)
 }
-func genrePublicRouter(r *gin.RouterGroup){
+func genrePublicRouter(r *gin.RouterGroup) {
 	r.GET("", controllers.GetAllGenres)
 }
